--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="intro">
                     <!-- Img -->
-                    <img src="img/avatar.jpg`" alt="Akash">
+                    <img src="/img/avatar.jpg" alt="Akash">
                     <h1>Akash Gupta</h1>
                     <span class="text" >I'm a <span id="element"></span></span>
                     <!-- Social Media Icon -->
